--- a/modules/community/_posts/2000-01-01-concepts.markdown
+++ b/modules/community/_posts/2000-01-01-concepts.markdown
@@ -30,7 +30,7 @@ published: true
 
 <iframe width="560" height="315" src="//www.youtube.com/embed/c4KM9QgfOXA" frameborder="0" allowfullscreen></iframe>
 
-
+<!--
 ## Why does Community Matter for Learning?
 
 **Diversity of perspectives.** As Dave said, books are inert objects. Pushing "play" on a video is one passive experience. When you engage ideas with other people, the dialogue and exchanges challenge you to look at things several different ways. We won't tell you what to think--engaging others helps us think uniquely and engage collaboratively.
@@ -50,11 +50,24 @@ The way those pieces work together looks like this:
 ![Venn diagram showing the intersection of social presence, cognitive presence and teaching presence.]({{site.baseurl}}/img/community-diagram.jpg)
 
 In this part of the course, we’ll talk about “social presence” (or community), and how to build one around your learning goals. 
+-->
+## ¿Por qué la comunidad es importante para aprender?
 
+**Diversidad de perspectiva.** Como David dice, los libros son objetos inhertes. Darle "play" en un video es una experienca pasiva. Cuando se conectan sus ideas con las otras personas, el diálogo y el intercambio los desafía a mirar las cosas en muchas diferentes formas. No les diremos que pensar --participar con otros nos ayuda a pensar de forma única y nos involucra colaborativamente.
+
+**Flexibilidad y soporte.** Cuando encuentren su equipo de aprendizaje--la gente que comparte sus visiones y valores--ellos pueden orientarnos cuando encuentren contratiempos y ayudar a deliniear los siguentes objetivos. Ellos pueden aportar información que ayude a afinarnos en los puntos debiles y en el desarrollo de fortalezas.
+
+*Los estudiantes van más lejos cuando aprenden juntos*
+
+La forma en que estas piezas trabajan juntas se ven así:
+
+![Diagrama de Venn mostrando la intersección de la presencia social, cognitiva y de enseñanza.]({{site.baseurl}}/img/community-diagram.jpg)
+
+<!--
 ## OK, But What’s Community?
 
 Let's ask around:
-
+support and stretchsupport and stretch
 Scholar and writer Clay Shirky, in describing [how the open source community Perl works](https://www.youtube.com/watch?v=Xe1TZaElTAs) described his litmus test: 
 
 ![shirky community.png](/img/shirky%20community.png)
@@ -70,7 +83,7 @@ We describe it as a combination of the above: community is a sense of *shared pu
 Think about your local PTA, block party organization, church, book club or alumni association. There’s always a reason that you’re there, and a sense that you’re included. 
 
 As a course facilitator, you are designing a learning community. Peer-to-peer learning is a network of people helping each other. Once you have your learning goals established, the next series of ideas to think about is how to build a community around those goals. 
-
+-->
 ## How Do I Design a Community?
 Good question. In order to design a stellar learning community, you'll need to think through a few questions. In your course, how will you:
 
